client/src/App.css
.App {
	text-align: center;
}

.App-logo {
	height: 40vmin;
	pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
	.App-logo {
		animation: App-logo-spin infinite 20s linear;
	}
}

.App-header {
	background-color: #282c34;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: white;
}

.App-link {
	color: #61dafb;
}

body::-webkit-scrollbar{
  width: .75rem;
}

body::-webkit-scrollbar-track{
  background:  rgb(255, 255, 255);
  border-radius: 10px;
}

body::-webkit-scrollbar-thumb{
  background:   #6649b8;
  border-radius: 10px;
}


button:hover,
input:hover {
	cursor: pointer;
}

a {
	text-decoration: none;
}

